--- a/prog/index.html
+++ b/prog/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    
+    <p id="pElement">Click on me</p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
     <script src="script1.js"></script>
     <script src="class1.js"></script>
